[package]
name = "hlbsp"
version = "0.1.0"
authors = ["r4v3n6101 <raven6107@gmail.com>"]
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
clap = { version = "4", features = ["derive"] }
bevy = { version = "0.9", features = ["trace"] }

egui = "0.20"
bevy_egui = "0.19"
gs_files = { path = "crates/gs_files" }
