[package]
name = "hlbsp"
version = "0.4.8"
authors = ["r4v3n6101 <raven6107@gmail.com>"]
edition = "2021"

[workspace]
members = ["file"]

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
glium = "0.32.1"
glam = "0.24.1"
itertools = "0.11.0"
file = { path = "file" }
elapsed = "0.1.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
