[package]
name = "hlbsp"
version = "0.4.8"
authors = ["r4v3n6101 <raven6107@gmail.com>"]
edition = "2021"

[workspace]
members = ["file"]

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
glium = "0.32.1"
glam = "0.24.1"
itertools = "0.11.0"
# file = { path = "file" }
goldsrc-rs = "0.8.0"
elapsed = "0.1.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0.72"
image = { version = "0.24.7", default-features = false, features = ["tga"] }
