[package]
name = "file"
version = "0.3.2"
authors = ["r4v3n6101 <raven6107@gmail.com>"]
edition = "2018"

[dependencies]
arraylib = "0.3.0"

[dependencies.nom]
version = "6.0.0"
default-features = false
features = ["std"]

[dependencies.image]
version = "0.23.11"
default-features = false
features = ["tga"]
