[package]
name = "file"
version = "0.3.3"
authors = ["r4v3n6101 <raven6107@gmail.com>"]
edition = "2018"

[dependencies]
arraylib = "0.3.0"

[dependencies.nom]
version = "7.0.0"
default-features = false
features = ["std"]

[dependencies.image]
version = "0.24.1"
default-features = false
features = ["tga"]
